--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     {
       "src": "/(.*)",
       "dest": "src/main.ts",
-      "methods": ["GET", "POST", "PUT", "DELTE"]
+      "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
 }
