--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "class-validator": "^0.14.0",
     "mongoose": "^7.5.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
